--- a/css files/assistant.css
+++ b/css files/assistant.css
@@ -10,3 +10,9 @@
 .s-bg-color {
     background-color: rgb(37, 162, 195);
 }
+.th-bg-color {
+    background-color: #eee;
+}
+.beaj-bg-color {
+    background-color: rgba(144, 144, 144, 0.075);
+}
